--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vue-lessons-2/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue lesson 2</title>
-    <script type="module" crossorigin src="/assets/index.9d0c1bbf.js"></script>
-    <link rel="stylesheet" href="/assets/index.578015ca.css">
+    <script type="module" crossorigin src="/vue-lessons-2/assets/index.798d5d5f.js"></script>
+    <link rel="stylesheet" href="/vue-lessons-2/assets/index.cf399251.css">
   </head>
   <body>
     <div id="app"></div>
